* Added: Number of failed attempts at student assessment.
* Added: Validation for user related functions to avoid processing when there is no logged user.
* Improved: Change "Duration" to "Time Limit" label.
* Improved: Unify all TinyMCE editors CP instance.
* Improved: Process of saving answers.
* Improved: Required unit message.
* Improved: Message box for paid course.
* Updated: Bundled MarketPress to latest version.
* Fixed: Remove inclusion of CP assets on none CP pages.
* Fixed: WooCommerce "Out of stock" product status.
* Fixed: Deleting modules when section is deleted.
* Fixed: Missing untranslated texts.
* Fixed: Marketpress sale price.
* Fixed: Editor height.
* Fixed: Missing grade for manualy graded fields when using "Save & Exit".
* Fixed: Too many redirects error.
* Fixed: HTML tags not showing in Multiple/Single Choice field.
* Fixed: Ignoring "User also needs to pass all required assessments" unit option.
* Fixed: "Passing Grade" value one assessments page.
* Fixed: Link to student profile in "Number of Courses" column.

= 2.0.5 =
-------------------------------------------------
* Fixed errors with PHP 7.1.1.
* Added HTML preview for Raports.
* Added ability to turn on/off social sharing icons.
* Added check is safe_mode before call set_time_limit() function.
* Added the action "coursepress_woocommerce_product_updated". This action has two variable $product_id and $course_id and is called after update product by CoursePress.
* Added check is user logged before we show comment form in discussion module.
* Added CoursePress Endpoints to Apperance -> Menu screen.
* Added ability to remember the last sorting chosen by user on the list of courses in admin area.
* Added new option "Show empty units" which allow to show units without modules.
* Improved select2 field for prerequisites and remove current course from the list.
* Improved MarketPress product thumbnail and images integration.
* Improved link building to student profile in admin area.