@@ -1018,7 +1018,7 @@ input.button.button-primary.instructor-assign {
   border-radius: 10px;
   padding: 10px;
   margin-top: 10px;
-  width: 50%;
+  width: auto;
 }
 #course-setup-steps .step-content .payment-message h4 {
   margin-top: 0;
